# omni-timetravel

./: CMakeLists.txt  DESIGN.md  LICENSE  README.md  TimeTravel.cpp  TimeTravel.hpp  TimeTravelLinux.cpp  TimeTravelWindows.cpp
tests/: CMakeLists.txt  test_timetravel.cpp
